# xivapi-rs

./: Cargo.toml  LICENSE
src/: builder.rs  error.rs  lib.rs  prelude.rs
src/models/: character.rs  content.rs  free_company.rs  id.rs  linkshell.rs  mod.rs  search.rs
src/models/content/: achievement.rs  action.rs  emote.rs  enemy.rs  fate.rs  instance_content.rs  item.rs  leve.rs  minion.rs  mod.rs  mount.rs  npc.rs  place_name.rs  quest.rs  recipe.rs  status.rs  title.rs  weather.rs
src/models/search/: achievement.rs  action.rs  character.rs  emote.rs  enemy.rs  fate.rs  free_company.rs  instance_content.rs  item.rs  leve.rs  linkshell.rs  minion.rs  mount.rs  npc.rs  place_name.rs  quest.rs  recipe.rs  status.rs  title.rs  weather.rs
src/routes/: character.rs  content.rs  free_company.rs  linkshell.rs  mod.rs
src/routes/search/: character.rs  free_company.rs  linkshell.rs  mod.rs
src/util/serde/: comma.rs  int_bool.rs  mod.rs  ts_str.rs  u64_str.rs
tests/: integration_test.rs
