[package]
name = "xivapi"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2021"

[dependencies]
reqwest = "0.11.18"
url = { version = "2.4.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
log = "0.4"
thiserror = "1.0"
futures = "0.3.28"
futures-util = "0.3.28"
async-trait = "0.1.68"
anyhow = "1.0.71"
tokio = { version = "1.29.1", features = ["full"] }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.ffxiv_types]
version = "1.9.0"
default-features = false
features = ["worlds", "with_serde"]
